dovecot/dovecot-pigeonhole/tests/execute/errors/conflict-reject-redirect.sieve
require "reject";

reject "I am not interested in your nonsense.";
redirect "frop@example.com";
